--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,12 +4,15 @@ on:
   push:
 
 jobs:
-  echo-test:
+  build-test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Echo the name
-        run: |
-          export NAME=Mathias
-          echo the $NAME
+      - uses: actions/chckout@v3
+      - uses: actions/setup-node@v3
+        with: 
+          node-version: 16
+      - run: npm ci
+      - run: npm run build
+      - run: npm test
         
