--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test workflow
+name: Cours CI CD
 
 on:
   push:
@@ -16,3 +16,15 @@ jobs:
       - run: npm run build
       - run: npm test
         
+  deploy:
+    runs-on: ubuntu-latest
+
+    needs: build-test
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "JokeAPP" #Must be unique in Heroku
+          heroku_email: "dragnir19@gmail.com"
